@@ -133,9 +133,9 @@ int libfcache_cache_value_free(
 		internal_cache_value = (libfcache_internal_cache_value_t *) *cache_value;
 		*cache_value         = NULL;
 
-		if( ( internal_cache_value->flags & LIBFCACHE_CACHE_VALUE_FLAG_MANAGED ) != 0 )
+		if( internal_cache_value->value != NULL )
 		{
-			if( internal_cache_value->value != NULL )
+			if( ( internal_cache_value->flags & LIBFCACHE_CACHE_VALUE_FLAG_MANAGED ) != 0 )
 			{
 				if( internal_cache_value->free_value == NULL )
 				{
@@ -167,6 +167,50 @@ int libfcache_cache_value_free(
 		 internal_cache_value );
 	}
 	return( result );
+}
+
+/* Clears the cache value
+ * This function does not free the value
+ * Returns 1 if successful or -1 on error
+ */
+int libfcache_cache_value_clear(
+     libfcache_cache_value_t *cache_value,
+     libcerror_error_t **error )
+{
+	libfcache_internal_cache_value_t *internal_cache_value = NULL;
+	static char *function                                  = "libfcache_cache_value_free";
+
+	if( cache_value == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid cache value.",
+		 function );
+
+		return( -1 );
+	}
+	internal_cache_value = (libfcache_internal_cache_value_t *) cache_value;
+
+	if( memory_set(
+	     internal_cache_value,
+	     0,
+	     sizeof( libfcache_internal_cache_value_t ) ) == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_SET_FAILED,
+		 "%s: unable to clear cache value.",
+		 function );
+
+		return( -1 );
+	}
+	internal_cache_value->file_index = -1;
+	internal_cache_value->offset     = (off64_t) -1;
+
+	return( 1 );
 }
 
 /* Retrieves the cache value identifier
