@@ -1,6 +1,9 @@
 TODO
 * add tests
 
+20140912
+* added clear cache entry functionality
+
 20140601
 * updated dependencies
 
